test/files/pos/t3495.scala
// scalac: -Dsoot.class.path=bin:.
class Foo { }

