test/files/neg/yimports-nosuch.scala
// scalac: -Yimports:skala,scala.Predeff
//
class C
